Removed local debug

--- a/RestfullService/appsettings.Development.json
+++ b/RestfullService/appsettings.Development.json
@@ -1,5 +1,8 @@
 {
   "ASPNETCORE_ENVIRONMEN": "Development",
+  "ConnectionStrings": {
+
+  },
   "Logging": {
     "LogLevel": {
       "Default": "Information",
